--- a/examples/example1.jrxml
+++ b/examples/example1.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.18.1.final using JasperReports Library version 6.18.1-9d75d1969e774d4f179fb3be8401e98a0e6d1611  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" printOrder="Horizontal" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" language="groovy" printOrder="Horizontal" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="postgres"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<subDataset name="Dataset1" uuid="677ada11-ba4f-44da-8a2d-37cd9c9bbbd4">
@@ -63,12 +63,10 @@
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
 	</field>
 	<detail>
-		<band height="676" splitType="Stretch">
+		<band height="802" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
-			<textField>
-				<reportElement mode="Opaque" x="90" y="0" width="465" height="20" forecolor="#030000" backcolor="#FFFB05" uuid="9d37d0b4-6a5a-4dbe-a57a-9e0b1fa6e3df">
-					<printWhenExpression><![CDATA[$F{country_code}=="MY"]]></printWhenExpression>
-				</reportElement>
+			<textField hyperlinkType="Reference">
+				<reportElement mode="Opaque" x="90" y="0" width="465" height="20" forecolor="#030000" backcolor="#FFFB05" uuid="9d37d0b4-6a5a-4dbe-a57a-9e0b1fa6e3df"/>
 				<box>
 					<pen lineWidth="2.25" lineStyle="Dashed" lineColor="#FFFFFF"/>
 					<topPen lineColor="#05FF05"/>
@@ -80,6 +78,7 @@
 					<font fontName="Arial Black" size="12" isBold="true" isItalic="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fullname}]]></textFieldExpression>
+				<hyperlinkReferenceExpression><![CDATA["http://www.yahoo.com"]]></hyperlinkReferenceExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" pattern="#,000.00######;#,000.00######-" hyperlinkType="RemotePage">
 				<reportElement x="0" y="0" width="80" height="20" uuid="641dffef-f501-4ae8-b8f4-080539d8db5a"/>
@@ -258,9 +257,9 @@
 				</reportElement>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.75"/>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#FF0905"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#0533FF"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<ellipse>
@@ -270,7 +269,7 @@
 					</graphicElement>
 				</ellipse>
 				<ellipse>
-					<reportElement key="" mode="Opaque" x="19" y="30" width="82" height="60" forecolor="#FF8205" backcolor="#FFF705" uuid="dc63d535-bbe8-4c76-8a7c-27b733429e22">
+					<reportElement key="" mode="Opaque" x="10" y="31" width="82" height="60" forecolor="#FF8205" backcolor="#FFF705" uuid="dc63d535-bbe8-4c76-8a7c-27b733429e22">
 						<property name="com.jaspersoft.studio.element.name" value="ellipse1"/>
 					</reportElement>
 					<graphicElement>
@@ -278,34 +277,36 @@
 					</graphicElement>
 				</ellipse>
 				<ellipse>
-					<reportElement mode="Transparent" x="49" y="75" width="140" height="80" uuid="628d5278-d0ac-45ec-98f8-8aa05197b24f"/>
+					<reportElement mode="Transparent" x="41" y="91" width="140" height="80" uuid="628d5278-d0ac-45ec-98f8-8aa05197b24f"/>
 					<graphicElement>
 						<pen lineWidth="4.0" lineStyle="Dashed" lineColor="#030303"/>
 					</graphicElement>
 				</ellipse>
 			</frame>
-			<componentElement>
-				<reportElement x="208" y="460" width="85" height="77" uuid="8c6c1c1c-b9db-475c-a866-affa5297c91a"/>
-				<jr:QRCode xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<jr:codeExpression><![CDATA["123456789"]]></jr:codeExpression>
-				</jr:QRCode>
-			</componentElement>
-			<componentElement>
-				<reportElement x="210" y="540" width="100" height="30" uuid="250a4ca1-e62f-4937-9158-8fc71db1ebd0"/>
-				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="Code128" drawText="false" checksumRequired="false">
-					<jr:codeExpression><![CDATA["1234"]]></jr:codeExpression>
-				</jr:barbecue>
-			</componentElement>
-			<componentElement>
-				<reportElement x="210" y="580" width="100" height="30" uuid="f97fb014-27b1-49af-a6ee-828107dcb731"/>
-				<jr:DataMatrix xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<jr:codeExpression><![CDATA["123456789"]]></jr:codeExpression>
-				</jr:DataMatrix>
-			</componentElement>
-			<subreport>
-				<reportElement x="340" y="460" width="200" height="200" uuid="c026ea5e-9b31-48d1-902a-e429d02c66ff"/>
-				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-			</subreport>
+			<image hAlign="Right">
+				<reportElement x="0" y="690" width="195" height="112" uuid="b10caa80-9589-46e1-9f5c-e5ab9d4a4f13"/>
+				<box>
+					<pen lineWidth="1.5" lineStyle="Dashed" lineColor="#09FF05"/>
+					<topPen lineWidth="1.5" lineStyle="Dashed" lineColor="#09FF05"/>
+					<leftPen lineWidth="1.5" lineStyle="Dashed" lineColor="#09FF05"/>
+					<bottomPen lineWidth="1.5" lineStyle="Dashed" lineColor="#09FF05"/>
+					<rightPen lineWidth="1.5" lineStyle="Dashed" lineColor="#09FF05"/>
+				</box>
+				<imageExpression><![CDATA["/Users/kstan/Desktop/going-online-29102998.jpeg"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="10" y="660" width="100" height="30" uuid="9d402be6-e859-4610-bcb4-35773b4a19bd"/>
+				<text><![CDATA[Retain Shape]]></text>
+			</staticText>
+			<image scaleImage="FillFrame" hAlign="Center" vAlign="Bottom" hyperlinkType="Reference">
+				<reportElement x="220" y="460" width="55" height="300" uuid="d8e21f69-b98b-44a4-b6b0-5d07881d3735"/>
+				<imageExpression><![CDATA["/Users/kstan/Desktop/going-online-29102998.jpeg"]]></imageExpression>
+				<hyperlinkReferenceExpression><![CDATA["http://www.yahoo.com"]]></hyperlinkReferenceExpression>
+			</image>
+			<staticText>
+				<reportElement x="210" y="770" width="100" height="30" uuid="17bd3afa-04aa-4ec5-bd99-3b3093e02b54"/>
+				<text><![CDATA[Fill frame]]></text>
+			</staticText>
 		</band>
 	</detail>
 </jasperReport>
