--- a/examples/invoice.jrxml
+++ b/examples/invoice.jrxml
@@ -139,7 +139,7 @@ now() as invoicedate,
 			<textField>
 				<reportElement x="0" y="110" width="380" height="20" uuid="aa54cf88-4046-4565-a38d-6451e1bbbdac"/>
 				<textElement>
-					<font isBold="true"/>
+					<font isBold="true" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{customername}]]></textFieldExpression>
 			</textField>
@@ -182,6 +182,13 @@ now() as invoicedate,
 				<reportElement x="380" y="130" width="60" height="20" uuid="5ca1f395-eae1-4ef1-b99a-5ec3f0fd5680">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
+				<box>
+					<pen lineWidth="3.5" lineStyle="Dotted" lineColor="#FF1612"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<text><![CDATA[Doc No :]]></text>
 			</staticText>
 			<staticText>
@@ -201,15 +208,16 @@ now() as invoicedate,
 	<columnHeader>
 		<band height="20" splitType="Stretch">
 			<staticText>
-				<reportElement x="40" y="0" width="210" height="20" uuid="c16fa8c2-50a8-4a53-aa16-3ff14da3c4dd">
+				<reportElement mode="Opaque" x="40" y="0" width="210" height="20" forecolor="#C8FFA8" backcolor="#5E5E5E" uuid="c16fa8c2-50a8-4a53-aa16-3ff14da3c4dd">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="073bd1ca-beb1-45c0-b933-a050b096fa6d"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box leftPadding="2" rightPadding="3">
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
+					<pen lineColor="#030303"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement verticalAlignment="Middle">
 					<font isBold="true"/>
@@ -217,15 +225,16 @@ now() as invoicedate,
 				<text><![CDATA[Item / Descriptions]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="250" y="0" width="50" height="20" uuid="af5df50b-84be-4950-ade9-915d1aebf64c">
+				<reportElement mode="Opaque" x="250" y="0" width="50" height="20" forecolor="#C8FFA8" backcolor="#5E5E5E" uuid="af5df50b-84be-4950-ade9-915d1aebf64c">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f2b97478-ee6a-43dc-9753-ed3a06609617"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box leftPadding="2" rightPadding="3">
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
+					<pen lineColor="#030303"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
@@ -233,15 +242,16 @@ now() as invoicedate,
 				<text><![CDATA[Qty]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="350" y="0" width="100" height="20" uuid="5a4fabc9-6a9f-444b-94ce-a066cbdb5da6">
+				<reportElement mode="Opaque" x="350" y="0" width="100" height="20" forecolor="#C8FFA8" backcolor="#5E5E5E" uuid="5a4fabc9-6a9f-444b-94ce-a066cbdb5da6">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b2f66776-e8df-4823-96ba-f7a420b9f43e"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box leftPadding="2" rightPadding="3">
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
+					<pen lineColor="#030303"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
@@ -249,15 +259,16 @@ now() as invoicedate,
 				<text><![CDATA[Unit Price]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="450" y="0" width="100" height="20" uuid="bc6fbac5-43e9-4ae8-9b51-bf5cfa9fb0cc">
+				<reportElement mode="Opaque" x="450" y="0" width="100" height="20" forecolor="#C8FFA8" backcolor="#5E5E5E" uuid="bc6fbac5-43e9-4ae8-9b51-bf5cfa9fb0cc">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="49d7930c-81cf-4e09-8216-c33508e04a95"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box leftPadding="2" rightPadding="3">
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
+					<pen lineColor="#030303"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
@@ -265,15 +276,16 @@ now() as invoicedate,
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="300" y="0" width="50" height="20" uuid="9d640e81-b0a2-4785-943d-27011b0765ee">
+				<reportElement mode="Opaque" x="300" y="0" width="50" height="20" forecolor="#C8FFA8" backcolor="#5E5E5E" uuid="9d640e81-b0a2-4785-943d-27011b0765ee">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="7b5391b3-9770-4192-bd6b-9510b02088c4"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box leftPadding="2" rightPadding="3">
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
+					<pen lineColor="#030303"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
@@ -281,14 +293,15 @@ now() as invoicedate,
 				<text><![CDATA[Unit]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="0" width="40" height="20" uuid="bed6572b-803d-4b4b-85d9-157afdb3818b">
+				<reportElement mode="Opaque" x="0" y="0" width="40" height="20" forecolor="#C8FFA8" backcolor="#5E5E5E" uuid="bed6572b-803d-4b4b-85d9-157afdb3818b">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box leftPadding="2" rightPadding="3">
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
+					<pen lineColor="#030303"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#030303"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
@@ -384,7 +397,7 @@ now() as invoicedate,
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
-					<font fontName="Times"/>
+					<font fontName="Times" isItalic="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{description}]]></textFieldExpression>
 			</textField>
@@ -410,7 +423,7 @@ now() as invoicedate,
 	</lastPageFooter>
 	<summary>
 		<band height="47" splitType="Stretch">
-			<textField pattern="#,##0.###;#,##0.###-">
+			<textField pattern="#,###.###;#,###.###-">
 				<reportElement x="250" y="0" width="50" height="20" uuid="3ac10346-16c1-4df4-8695-f9600cbdd4e7">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
@@ -426,7 +439,7 @@ now() as invoicedate,
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$V{totalqty}]]></textFieldExpression>
 			</textField>
-			<textField pattern="#,##0.###;#,##0.###-">
+			<textField pattern="#,##0.00#;#,##0.00#-">
 				<reportElement x="450" y="0" width="100" height="20" uuid="43699732-8c35-4335-b976-5d5ecf2e13b8">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
